# CppAutomation

./: .gitignore
server/web_api/: CMakeLists.txt  main.cpp
server/web_api/app/services/: StudentService.cpp
server/web_api/data/: DatabaseConnection.cpp
server/web_api/data/postgres/: PostgresqlConnection.cpp
server/web_api/data/repositories/: StudentRepository.cpp
server/web_api/domain/models/: Student.cpp
server/web_api/domain/repositories/: IStudentRepository.cpp
server/web_api/extensions/: DataTimeExtensions.cpp  DateTimeExtensions.cpp  UuidExtensions.cpp
